Git test, kleine wijziging in css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -186,6 +186,10 @@ header h1, p{
 
 /*///////////// 3.2 Testimonial /////////////*/
 
+.main{
+    width: 60vw;
+}
+
 
 
 /*///////////// 3.3 Support /////////////*/
