--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,9 +71,28 @@ body{
 }
 
 button{
+    height: 40px;
+    padding: 20px;
+    border-radius: 20px;
     background-color: #1C2B32;
     color: #fff;
+    font-size: 14px;
+    font-weight: 700;
+    transition: all 0.5s ease;
 }
+
+button:hover{
+    background-color: #899CA0;
+    color: #1C2B32;
+    font-size: 14px;
+    font-weight: 700;
+    cursor: pointer;
+}
+
+/*div{*/
+/*    border: 1px solid red;*/
+/*}*/
+
 
 /*////////////////////////
     2. Typography
@@ -85,7 +104,8 @@ h1{
 }
 
 h2{
-    font-size: 48px;
+    font-size: 28px;
+    font-weight: 700;
 }
 
 h3{
@@ -134,16 +154,16 @@ p{
     align-items: center;
 }
 
-header h1, p{
+header h1{
     margin-bottom: 30px;
 }
 
 /* Form wrapper styling */
 
 .search-wrapper {
-    width: 450px;
-    height: 50px;
-    /*margin: 150px auto 50px auto;*/
+    width: 500px;
+    height: 55px;
+    margin-top: 30px;
     border: 2px solid #1C2B32;
     border-radius: 40px;
     background: transparent;
@@ -155,8 +175,6 @@ header h1, p{
 /* Form text input */
 
 .search-wrapper input {
-    width: 50%;
-    height: 20px;
     border-style: none;
     background: transparent;
     color: #1C2B32;
@@ -164,8 +182,8 @@ header h1, p{
 }
 
 ::placeholder {
+    font-size: 14px;
     color: #1C2B32;
-    font-size: 16px;
 }
 
 .search-wrapper input:focus {
@@ -175,20 +193,49 @@ header h1, p{
 /* Form submit button */
 .search-wrapper button {
     height: 100%;
-    width: 180px;
     border-radius: 0px 40px 40px 0px;
     border: none;
-}
-
-.search-wrapper button:hover{
-
 }
 
 /*///////////// 3.2 Testimonial /////////////*/
 
 .main{
-    width: 60vw;
+    padding: 30px 20vw 30px 20vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
+
+.card{
+    background-color: white;
+    padding: 50px;
+    border-radius: 5px;
+    margin-top: 40px;
+    box-shadow: 0px 17px 52px -19px rgba(0, 0, 0, 0.6);
+    display: flex;
+    text-align: center;
+}
+
+.blockquote{
+    margin-right: 15px;
+}
+.card-content{
+    text-align: left;
+}
+
+.card-profile{
+    display: flex;
+    align-items: center;
+    margin-top: 30px;
+}
+
+.card-profile img{
+    height: 65px;
+    margin-right: 30px;
+}
+
+
 
 
 
